urcu/tests/ui/list/iter-reverse-fail-1.stderr
error[E0505]: cannot move out of `guard` because it is borrowed
  --> tests/ui/list/iter-reverse-fail-1.rs:9:10
   |
7  |     let guard = context.rcu_read_lock();
   |         ----- binding `guard` declared here
8  |     let mut iter = list.iter_reverse(&guard);
   |                                      ------ borrow of `guard` occurs here
9  |     drop(guard);
   |          ^^^^^ move out of `guard` occurs here
10 |     log::info!("{:?}", iter.next());
   |                        ---- borrow later used here
